ModelDetails Dark Mode fix

--- a/frontend/css/modelDetails.css
+++ b/frontend/css/modelDetails.css
@@ -153,3 +153,14 @@
     height: 100%;
     background-color: attr(data-color);
 }
+
+/* ModelDetails Dark Mode*/
+body.dark-mode .links-container {
+    background-color: #444;
+}
+body.dark-mode .temporal-section {
+    background-color: #444;
+}
+body.dark-mode .info-section {
+    background-color: #444; 
+}
